prevent double border on responsive .table-border

--- a/scss/_tables.scss
+++ b/scss/_tables.scss
@@ -150,6 +150,11 @@
   //
   // border: $table-border-width solid $table-border-color;
   // -ms-overflow-style: -ms-autohiding-scrollbar; // See https://github.com/twbs/bootstrap/pull/10057
+
+  // Prevent double border on horizontal scroll due to use of `display: block;`
+  &.table-bordered {
+    border: 0;
+  }
 }
 
 
